# diffbank_old

./: .gitignore  README.md  plot_style.mplstyle  requirements.txt  setup.cfg
notebooks/: 3pn-sgd.ipynb  3pn.ipynb  Parameter_Transformation.ipynb  Parameter_Transformation_TaylorF2.ipynb  README.md  TaylorF2ReducedSpin.ipynb  Untitled.ipynb  eff_pts.ipynb  flow_utils.py  flows.ipynb  mlp.ipynb  plotting_3PN.ipynb  scaling-relations.ipynb  stochastic.ipynb  testing.ipynb  tests-1.ipynb
old/: Gen_bank_35PN_nospin.py  Ntemplates_35PN_nospin.py  jax_minimize_wrapper.py  kappa_waveform.py  kappa_waveform_old.py  test_bank_class.py  test_bankclass.py  test_rejection_sampling.py
scripts/: 1pn_effectualness.py  5d_effectualness.py  5d_effectualness_TE.py  6d_effectualness.py  6d_metric_conditioning.py  LIGO-P1200087-v18-aLIGO_MID_LOW.txt  README.md  calc_bank_eff.py  fig2.py  gen_4D_kappabank_search.py  gen_4D_taylorf2bank.py  genbank_2D_threePN.py  genbank_3D_taylorf2reducedspin.py  genbank_4D_taylorf2.py  job-3D-taylorfsreducedspin.sh  job-tf2rs.sh  job-threePN-coverage.sh  job-threePN-est-p.sh  job-threePN-scaling.sh  job-threePN-stochastic.sh  job-threePN.sh  match_bugs.ipynb  plot_bank_effs.py  plot_density.py  plot_eta_dist.py  plot_scalar_curvature.py  plot_scaling.py  plot_threePN.py  plot_threePN_scaling.py  run_threePN_est_p.sh  run_threePN_scaling.sh  taylorf2reducedspin.py  taylorf2reducedspin_density_plot.py  test_effpoints.py  threePN-p.txt  threePN.py  threePN_est_p.py  threePN_est_p_variation.py  twoD_effectualness_test.py
test/: test_bank.py  test_eff.py  (+5 more)
(+161 files in other folders)
