[metadata]
name = diffbank
version = 0.0.1
description = Automatic gravitational wave template bank generator
long_description = file: README.md
long_description_content_type = text/markdown
keywords = gravitational waves, template banks, jax
url = https://github.com/adam-coogan/diffbank
project_urls =
    Bug Tracker = https://github.com/adam-coogan/diffbank
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True
install_requires =
    jax
    jaxlib
    numpy
    tqdm

[options.packages.find]
where = src
